[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=70.1.0,<=78.1.0",   # Required for "bdist_wheel" to work correctly.
    "setuptools-scm>=8.0,<=8.2.1",  # Automatically include all Git-controlled files in sdist
    "packaging>=24.0,<26",

    # needed to find the numpy include headers,
    # pin to lowest runtime allowed version to take advantage of backwards compatibility
    "numpy>=1.24.4,<2.4.0;  python_version < '3.13'",
    "numpy>=2.0,<2.4.0;     python_version >= '3.13'",

    # Requirements for building Basilisk through conanfile
    "conan>=2.0.5,<=2.15.1",
    "cmake>=3.26,<4.0",
    "swig>=4.2.1"  # Known to work with https://github.com/nightlark/swig-pypi/pull/120
]

[project]
name        = 'bsk'
dynamic     = ["version", "dependencies"]
requires-python = ">=3.8, <3.14"

readme      = "README.md"
license     = {file = "LICENSE"}
description = "Basilisk: an Astrodynamics Simulation Framework"

[project.urls]
homepage = 'https://avslab.github.io/basilisk/'
source = "https://github.com/AVSLab/basilisk"
tracker = "https://github.com/AVSLab/basilisk/issues"

# Define console scripts here
[project.scripts]
bskLargeData = "Basilisk.utilities.bskLargeData:main"
bskExamples = "Basilisk.utilities.bskExamples:main"

[tool.setuptools]
packages = []  # XXX: Leave blank, populated automatically by setup.py.
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.so", "*.dll", "*.lib", "*.pyd", "*.a", "*.dylib"]  # Include all built objects.
Basilisk = [
    "supportData/AlbedoData/*",
    "supportData/AtmosphereData/*",
    "supportData/DentonGEO/*",
    "supportData/EphemerisData/*.tpc",
    "supportData/EphemerisData/*.dat",
    "supportData/EphemerisData/*.tls",
    "supportData/EphemerisData/*.tsc",
    "supportData/LocalGravData/*",
    "supportData/MagneticField/*"
]

[tool.setuptools.dynamic]
version = {file = "docs/source/bskVersion.txt"}
dependencies = {file = "requirements.txt"}

[project.optional-dependencies]
test = [
  "psutil",
  "pytest-error-for-skips",
  "pytest",
]

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip  = ["*-win32", "cp38-macosx_arm64", "*-musllinux_*"]
build-verbosity = 1
test-extras = ["test"]
test-command = "bskLargeData && pytest -v {project}/src/tests -m \"not ciSkip and not scenarioTest\""

[tool.cibuildwheel.environment]
CMAKE_BUILD_TYPE = "Release"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"
CMAKE_OSX_DEPLOYMENT_TARGET = "11.0"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "python -m delvewheel repair -v --ignore-existing --analyze-existing -w {dest_dir} {wheel}"

[tool.cibuildwheel.linux]
archs = ["native"]
repair-wheel-command = [
  "auditwheel repair --strip -w {dest_dir} {wheel}"
]
manylinux-x86_64-image  = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
